--- a/existenz.html
+++ b/existenz.html
@@ -50,12 +50,18 @@
         ihnen war einmal dort, wo du dich jetzt befindest. Und jeder von ihnen hat es geschafft erfolgreich zu sein.
         Unsere Dozenten wissen, worauf es ankommt, was man lieber sein lassen sollte, und sie sehen dich und deine
         Idee.</p>
-      <p>Das Existenzgründungscoaching kann von der Agentur für Arbeit / Jobcenter vollständig gefördert werden, wenn du
+      <p class="mb-4">Das Existenzgründungscoaching kann von der Agentur für Arbeit / Jobcenter vollständig gefördert werden, wenn du
         arbeitssuchend oder arbeitslos gemeldet bist. Für mehr Informationen dazu und unseren Coachings lade dir einfach
         unseren kostenlosen Flyer herunter.</p>
-      <div class="text-center mb-3">
+      <div class="text-center mb-4">
         <a href="pdf/Existenz.pdf" download="Akadia-Akademie-Existenzgründung.pdf">
           <div class="button">Hier mehr Infos herunterladen</div>
+        </a>
+      </div>
+      <div class="text-center">
+        Du hast noch Fragen? Schreib uns einfach an
+        <a href="mailto:kontakt@akadia-akademie.de?subject=Existenzgründung&body=Hallo Akadia Akademie,%0D%0A%0D%0AIch habe Fragen zur Existenzgründung.%0D%0A%0D%0A">
+          kontakt@akadia-akademie.de
         </a>
       </div>
     </div>
@@ -63,9 +69,12 @@
       <img src="img/ExistenzFlyer.jpg" class="d-block mx-auto" width="100%">
     </div>
   </div>
+  <div class="row">
+
+  </div>
 </div>
 
-<div class="jumbotron d-flex justify-content-center p-5 m-0">
+<!--div class="jumbotron d-flex justify-content-center p-5 m-0">
   <div class="text-left" style="width: 50%">
     <form action="https://akadia-akademie.de/wp-json/contact-form-7/v1/contact-forms/1377/feedback"
           method="post" target="dummyframe">
@@ -84,7 +93,16 @@
     </form>
   </div>
 </div>
-<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
+<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe-->
+
+<!--div class="jumbotron d-flex justify-content-center p-5 m-0">
+  <div class="text-left" style="width: 50%">
+    Du hast noch Fragen? Schreib uns einfach an
+    <a href="mailto:kontakt@akadia-akademie.de?subject=Existenzgründung&body=Hallo Akadia,%0D%0A%0D%0AIch habe Fragen zur Existenzgründung.%0D%0A%0D%0A">
+      kontakt@akadia-akademie.de
+    </a>
+  </div>
+</div-->
 
 <!-- Inhalt: Download Button -> Flyer -->
 <!-- Inhalt: Kontaktformular -->
