--- a/karriere.html
+++ b/karriere.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
   <!-- Bootstrap dependencies -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- General styles -->
   <link rel="stylesheet" href="styles.css">
   <!-- Page specific styles -->
@@ -39,20 +40,38 @@
     <div class="col-12 col-md-6 col-lg-8 mb-3">
       <h1>Karrierecoaching</h1>
 
-      <p>Du hast eine Ausbildung gemacht, oder gar studiert, danach gearbeitet und bist von Unternehmen zu Unternehmen gesprungen, weil es nicht gepasst hat zwischen euch… Schwupps da sind 5 Jahre ins Land gegangen und du stehst gefühlt an demselben Punkt in deinem Leben wie vorher.</p>
+      <p>Du hast eine Ausbildung gemacht, oder gar studiert, danach gearbeitet und bist von Unternehmen zu Unternehmen
+        gesprungen, weil es nicht gepasst hat zwischen euch… Schwupps da sind 5 Jahre ins Land gegangen und du stehst
+        gefühlt an demselben Punkt in deinem Leben wie vorher.</p>
       <p>Wieder Anträge ausfüllen für Arbeitslosengeld oder Hartz4, wieder dieses Gefühl versagt zu haben…</p>
-      <p>Arbeit zu haben die mich erfüllt und von der ich leben kann, das wäre großartig! Muss es eine 40-Stunden -Woche sein? Wie kommuniziere ich gut mit meinen Vorgesetzten?</p>
-      <p>Jeder der im Arbeitsleben steht, wird früher oder später mit solchen Gedanken konfrontiert. Und das ist auch gut! Denn das bedeutet du machst dir Gedanken über dein Leben und dich. Durch den großen Einfluss der sozialen Medien scheint Erfolg, Reichtum und Beliebtheit nur einen Klick entfernt zu sein. Du kannst alles haben und alles sein was du willst ohne großen Aufwand….oder?</p>
+      <p>Arbeit zu haben die mich erfüllt und von der ich leben kann, das wäre großartig! Muss es eine 40-Stunden -Woche
+        sein? Wie kommuniziere ich gut mit meinen Vorgesetzten?</p>
+      <p>Jeder der im Arbeitsleben steht, wird früher oder später mit solchen Gedanken konfrontiert. Und das ist auch
+        gut! Denn das bedeutet du machst dir Gedanken über dein Leben und dich. Durch den großen Einfluss der sozialen
+        Medien scheint Erfolg, Reichtum und Beliebtheit nur einen Klick entfernt zu sein. Du kannst alles haben und
+        alles sein was du willst ohne großen Aufwand….oder?</p>
       <p>In der Realität ist das leider nicht der Fall…</p>
       <p>Hinter jeder Erfolgsstory stecken lange Stunden harte Arbeit.</p>
-      <p>Aber Arbeit zu haben ist kein Garant für Geld und Zufriedenheit. Dein Job soll keine Last sein, er soll dir Freude bringen, das Gefühl etwas zu bewegen und dein Leben zu sichern!</p>
+      <p>Aber Arbeit zu haben ist kein Garant für Geld und Zufriedenheit. Dein Job soll keine Last sein, er soll dir
+        Freude bringen, das Gefühl etwas zu bewegen und dein Leben zu sichern!</p>
       <p>Akadia kann dir dabei helfen dem ein Stück näher zu kommen.</p>
-      <p>Bei unserem Einzelcoaching besprechen wir Themen, die DICH weiterbringen. Deine Vorstellungen und wie DU sie am besten umsetzen kannst.</p>
-      <p>Das Karrierecoaching kann von der Agentur für Arbeit / Jobcenter vollständig gefördert werden, wenn du arbeitssuchend oder arbeitslos gemeldet bist. Für mehr Informationen dazu und unseren Coachings lade dir einfach unseren kostenlosen Flyer herunter.
+      <p>Bei unserem Einzelcoaching besprechen wir Themen, die DICH weiterbringen. Deine Vorstellungen und wie DU sie am
+        besten umsetzen kannst.</p>
+      <p>Das Karrierecoaching kann von der Agentur für Arbeit / Jobcenter vollständig gefördert werden, wenn du
+        arbeitssuchend oder arbeitslos gemeldet bist. Für mehr Informationen dazu und unseren Coachings lade dir einfach
+        unseren kostenlosen Flyer herunter.
       </p>
-      <a href="pdf/Karriere.pdf" download="Akadia-Akademie-Karrierecoaching.pdf">
-        <div class="button">Hier mehr Infos herunterladen</div>
-      </a>
+      <div class="text-center mb-4">
+        <a href="pdf/Karriere.pdf" download="Akadia-Akademie-Karrierecoaching.pdf">
+          <div class="button">Hier mehr Infos herunterladen</div>
+        </a>
+      </div>
+      <div class="text-center">
+        Du hast noch Fragen? Schreib uns einfach an
+        <a href="mailto:kontakt@akadia-akademie.de?subject=Karrierecoaching&body=Hallo Akadia Akademie,%0D%0A%0D%0AIch habe Fragen zum Karrierecoaching.%0D%0A%0D%0A">
+          kontakt@akadia-akademie.de
+        </a>
+      </div>
     </div>
     <div class="d-block d-md-none col-12">
       <img src="img/KarriereFlyer.jpg" class="d-block mx-auto" width="100%">
@@ -99,7 +118,8 @@
 <footer class="container-fluid content text-left pb-0">
   <div class="row justify-content-center">
     <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
-      <a id="team-button" onclick="showTeam()">Unser Team <span id="team-arrow">&#129047;</span></a> <!--oder Kontakt (aufklappen)-->
+      <a id="team-button" onclick="showTeam()">Unser Team <span id="team-arrow">&#129047;</span></a>
+      <!--oder Kontakt (aufklappen)-->
     </div>
     <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
       <a href="https://www.facebook.com/AkadiaAkademie/">
@@ -138,7 +158,11 @@
 
 <!-- Bootstrap scripts. See https://getbootstrap.com/docs/4.3/getting-started/introduction/#starter-template -->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
