--- a/index.html
+++ b/index.html
@@ -140,10 +140,15 @@
   <div id="team" class="row justify-content-center orange">
     <div class="col p-3 mx-0 my-3">
       <h1>Unser Team</h1>
-      Geschäftsführer: Jens Günther, Katja Ehrentraut<br>
-      Assistenz der Geschäftsführung: Katharina Kühn<br>
-      Telefon: 0800 7639660<br>
-      Mail: <a href="mailto:kontakt@akadia-akademie.de">kontakt@akadia-akademie.de</a>
+      <p class="mb-0 mt-2">Geschäftsführung:</p>
+      <p class="my-0 mx-3">Jens Günther</p>
+      <p class="my-0 mx-3">Katja Ehrentraut</p>
+      <p class="mb-0 mt-2">Assistenz der Geschäftsführung:</p>
+      <p class="my-0 mx-3">Katharina Kühn</p>
+      <p class="mb-0 mt-2">Marketing:</p>
+      <p class="my-0 mx-3">Yazmin Mendoza</p>
+      <p class="mb-0 mt-2">Telefon: 0800 7639660</p>
+      <p class="mb-0 mt-2">Mail: <a href="mailto:kontakt@akadia-akademie.de">kontakt@akadia-akademie.de</a></p>
     </div>
   </div>
   <div class="text-center mt-3">Copyright © 2023 AKADIA Akademie GmbH. All Rights Reserved.</div>
