Index hintergrund hellblau, style cleanups

--- a/dozenten.html
+++ b/dozenten.html
@@ -149,7 +149,7 @@
   <object data="logo.svg" width="100%" class="header-object"></object>
 </div>
 
-<div class="jumbotron d-flex justify-content-center p-5 m-0">
+<div class="container-fluid d-flex justify-content-center p-5 m-0">
   <div class="row">
     <div class="col-12 mb-3 text-center">
       <h1 class="align-self-center">Dozenten</h1>
@@ -186,7 +186,7 @@
 
 
 <!-- Container Sponsoren -->
-<div id="services" class="container-fluid orange content text-center">
+<div id="sponsoren" class="container-fluid orange content text-center">
   <div class="row justify-content-center">
     <div class="col col-md-2 col-md-offset-1 px-2 pt-2 pt-md-0">
       <a href="https://www.bvmw.de/" target="_blank">
