--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       max-height:70vh;
       width:100vw;
     }
+    /* Hintergrundbild hinter den Slides
     #parent_div {
       position: relative;
       background-color: #fff0;
@@ -42,7 +43,7 @@
       -moz-background-size: cover;
       -o-background-size: cover;
       background-size: cover;
-    }
+    }*/
 
   </style>
 </head>
@@ -105,7 +106,7 @@
 
 
 <!-- Container Sponsoren -->
-<div id="services" class="container-fluid orange content text-center">
+<div id="sponsoren" class="container-fluid orange content text-center">
   <div class="row justify-content-center">
     <div class="col col-md-2 col-md-offset-1 px-2 pt-2 pt-md-0">
       <a href="https://www.bvmw.de/" target="_blank">
