--- a/karriere-schrift.html
+++ b/karriere-schrift.html
@@ -31,7 +31,7 @@
       line-height: 1.8;
       color: #818181;
     }
-    .jumbotron, #services, #neuigkeiten {
+    .jumbotron, #sponsoren, #neuigkeiten {
       font-family: TCCEB, sans-serif;
       line-height: 1.2;
     }
@@ -91,7 +91,7 @@
 
 
 <!-- Container Sponsoren -->
-<div id="services" class="container-fluid orange content text-center">
+<div id="sponsoren" class="container-fluid orange content text-center">
   <div class="row justify-content-center">
     <div class="col col-md-2 col-md-offset-1 px-2 pt-2 pt-md-0">
       <a href="https://www.bvmw.de/" target="_blank">
