--- a/karriere.html
+++ b/karriere.html
@@ -12,15 +12,6 @@
   <link rel="stylesheet" href="styles.css">
   <!-- Page specific styles -->
   <style>
-    #neuigkeiten {
-      /*background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("money.jpg") no-repeat center top;
-      height: 100%;
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-      color: white;*/
-    }
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
@@ -32,7 +23,7 @@
 
 
 <!-- Container  -->
-<div id="neuigkeiten" class="container-fluid content">
+<div class="container-fluid content">
   <div class="row">
     <div class="d-none d-md-block col-md-6 col-lg-4">
       <img src="img/KarriereFlyer.jpg" class="d-block mx-auto" width="100%">
@@ -84,7 +75,7 @@
 
 
 <!-- Container Sponsoren -->
-<div id="services" class="container-fluid orange content text-center">
+<div id="sponsoren" class="container-fluid orange content text-center">
   <div class="row justify-content-center">
     <div class="col col-md-2 col-md-offset-1 px-2 pt-2 pt-md-0">
       <a href="https://www.bvmw.de/" target="_blank">
