--- a/standorte.html
+++ b/standorte.html
@@ -300,7 +300,7 @@
 
 
 <!-- Container Sponsoren -->
-<div id="services" class="container-fluid orange content text-center">
+<div id="sponsoren" class="container-fluid orange content text-center">
   <div class="row justify-content-center">
     <div class="col col-md-2 col-md-offset-1 px-2 pt-2 pt-md-0">
       <a href="https://www.bvmw.de/" target="_blank">
