--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <object data="logo.svg" width="100%" class="header-object"></object>
 </div>
 
-<div id="parent_div" class="jumbotron text-center p-0 m-0">
+<div id="parent_div" class="jumbotron orange text-center p-0 m-0">
   <div id="background" class="blurred-bg"></div>
   <div class="carousel slide"
        data-ride="carousel" data-pause="false">
