--- a/dozenten.html
+++ b/dozenten.html
@@ -220,7 +220,7 @@
 <footer class="container-fluid content text-left pb-0">
   <div class="row justify-content-center">
     <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
-      <a id="team-button" onclick="showTeam()">Unser Team <span id="team-arrow">&#129047;</span></a>
+      <a id="team-button" onclick="showTeam()">Unser Team <span id="team-arrow">&#x2B07;</span></a>
       <!--oder Kontakt (aufklappen)-->
     </div>
     <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
