Add ESF and ProvenExpert

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -17,7 +17,9 @@
       font-size: 18px;
       line-height: 1.2;
     }
-
+    footer div {
+      font-size: 24px;
+    }
     h2, h3, h4, h5 {
       padding-top: 1em;
       margin-bottom: 0.2em;
@@ -775,8 +777,17 @@
   </div>
 </div>
 
+<!-- Sachsen Anhalt ESF -->
+<div class="container-fluid content text-center">
+  <div class="row justify-content-center pt-0">
+    <div class="col-12 col-md-8 pt-0">
+      <img src="img/ESF.jpg" width="100%">
+    </div>
+  </div>
+</div>
+
 <!-- Footer links -->
-<footer class="container-fluid content text-left pb-0">
+<footer class="container-fluid content text-left py-0">
   <div class="row justify-content-center">
     <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
       <a id="team-button" onclick="showTeam()">Unser Team <span id="team-arrow">&#x2B07;</span></a> <!--oder Kontakt (aufklappen)-->
