--- a/index.html
+++ b/index.html
@@ -136,6 +136,38 @@
   </div>
 </div>
 
+<!-- ProvenExpert Bewertungssiegel -->
+<style type="text/css">
+  body {
+    -ms-overflow-style: scrollbar;
+  }
+  @media (max-width: 991px) {
+    #ProvenExpert_widget_container {
+      display: none !important;
+    }
+  }
+</style>
+<a id="ProvenExpert_widget_container"
+   href=https://www.provenexpert.com/akadiaakademie/?utm_source=Widget&amp;utm_medium=Widget&amp;utm_campaign=Widget
+   title="Kundenbewertungen &amp; Erfahrungen zu AkadiaAkademie. Mehr Infos anzeigen." target="_blank"
+   style="text-decoration:none;z-index:9999;position:fixed;float:left;line-height:0;right:0px;bottom:10px;"
+   rel="noopener noreferrer">
+  <img src=https://images.provenexpert.com/f7/3d/8f9e67d7cff7515b5a5928fe7395/widget_landscape_180_de_0.png
+       alt="Erfahrungen &amp; Bewertungen zu AkadiaAkademie" width="180" height="150" style="border:0"/>
+  <span id="ProvenExpert_slider_feedback" style="position:absolute;padding:0px 0 0px 0;top:0;left:180px;"></span>
+  <script type="text/javascript" src="//www.provenexpert.com/slider_akadiaakademie.js?sk=l_180" async></script>
+</a>
+<!-- ProvenExpert Bewertungssiegel -->
+
+<!-- Sachsen Anhalt ESF -->
+<div class="container-fluid content text-center">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-8">
+      <img src="img/ESF.jpg" width="100%">
+    </div>
+  </div>
+</div>
+
 <!-- Footer links -->
 <footer class="container-fluid content text-left pb-0">
   <div class="row justify-content-center">
