--- a/karriere-schrift.html
+++ b/karriere-schrift.html
@@ -121,6 +121,15 @@
   </div>
 </div>
 
+<!-- Sachsen Anhalt ESF -->
+<div class="container-fluid content text-center">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-8">
+      <img src="img/ESF.jpg" width="100%">
+    </div>
+  </div>
+</div>
+
 <!-- Footer links -->
 <footer class="container-fluid content text-left pb-0">
   <div class="row justify-content-center">
