--- a/impressum.html
+++ b/impressum.html
@@ -152,9 +152,18 @@
   </div>
 </div>
 
+<!-- Sachsen Anhalt ESF -->
+<div class="container-fluid content text-center">
+  <div class="row justify-content-center pt-0">
+    <div class="col-12 col-md-8 pt-0">
+      <img src="img/ESF.jpg" width="100%">
+    </div>
+  </div>
+</div>
+
 <!-- Footer links -->
-<footer class="container-fluid content text-left pb-0">
-  <div class="row justify-content-center">
+<footer class="container-fluid content text-left py-0">
+  <div class="row justify-content-center pt-0">
     <div class="col-8 col-md-5 pt-3 pt-lg-0 col-lg-3">
       <a id="team-button" onclick="showTeam()">Unser Team <span id="team-arrow">&#x2B07;</span></a> <!--oder Kontakt (aufklappen)-->
     </div>
