--- a/impressum.html
+++ b/impressum.html
@@ -154,8 +154,8 @@
 
 <!-- Sachsen Anhalt ESF -->
 <div class="container-fluid content text-center">
-  <div class="row justify-content-center pt-0">
-    <div class="col-12 col-md-8 pt-0">
+  <div class="row justify-content-center py-0">
+    <div class="col-12 col-md-8 py-0">
       <img src="img/ESF.jpg" width="100%">
     </div>
   </div>
