Bilder optimiert. Hartz -> Bürgergeld

--- a/akadia.html
+++ b/akadia.html
@@ -17,7 +17,7 @@
       height: 70vh;
     }
     .akadia-bg {
-      background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(200, 200, 200, 0.7)), url("img/AkadiaAnsZielBG_c.jpeg") no-repeat right top;
+      background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(200, 200, 200, 0.7)), url("img/AkadiaAnsZielBG.jpeg") no-repeat right top;
       height: 100%;
       -webkit-background-size: cover;
       -moz-background-size: cover;
@@ -59,7 +59,7 @@
       <p><b>Bildungsträger</b> = eine Art von „Schule“ die Wissen an Erwachsene mit Hilfe von Lehrern/Dozenten
         vermittelt.
       <p>Die AKADIA Akademie GmbH wurde 2017 mit dem Ziel gegründet, Menschen zu helfen. Vor allem Menschen, denen wenig
-        Mittel zur Verfügung stehen und die von Arbeitslosengeld oder Hartz4 leben.</p>
+        Mittel zur Verfügung stehen und die von Arbeitslosengeld oder Bürgergeld leben.</p>
       <p>Dies sollte nämlich kein Grund sein auf mittelmäßige Beratungen zurückzugreifen oder es gar nicht erst zu
         versuchen.</p>
       <p>Unsere Coachings werden von der Agentur für Arbeit oder dem Jobcenter durch einen Aktivierungs- und
