--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       z-index: -1;
     }
     .blurred-bg {
-      background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(100, 100, 100, 0.7)), url("img/StandorteBG_c.jpeg") no-repeat center top;
+      background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(100, 100, 100, 0.7)), url("img/StandorteBG.jpeg") no-repeat center top;
       height: 200%;
       -webkit-background-size: cover;
       -moz-background-size: cover;
