--- a/karriere.html
+++ b/karriere.html
@@ -34,7 +34,7 @@
       <p>Du hast eine Ausbildung gemacht, oder gar studiert, danach gearbeitet und bist von Unternehmen zu Unternehmen
         gesprungen, weil es nicht gepasst hat zwischen euch… Schwupps da sind 5 Jahre ins Land gegangen und du stehst
         gefühlt an demselben Punkt in deinem Leben wie vorher.</p>
-      <p>Wieder Anträge ausfüllen für Arbeitslosengeld oder Hartz4, wieder dieses Gefühl versagt zu haben…</p>
+      <p>Wieder Anträge ausfüllen für Arbeitslosengeld oder Bürgergeld, wieder dieses Gefühl versagt zu haben…</p>
       <p>Arbeit zu haben die mich erfüllt und von der ich leben kann, das wäre großartig! Muss es eine 40-Stunden -Woche
         sein? Wie kommuniziere ich gut mit meinen Vorgesetzten?</p>
       <p>Jeder der im Arbeitsleben steht, wird früher oder später mit solchen Gedanken konfrontiert. Und das ist auch
