--- a/standorte-18.html
+++ b/standorte-18.html
@@ -40,7 +40,7 @@
     }
 
     .standorte-bg {
-      background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(100, 100, 100, 0.7)), url("img/StandorteBG_c.jpeg") no-repeat center top;
+      background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(100, 100, 100, 0.7)), url("img/StandorteBG.jpeg") no-repeat center top;
       height: 100%;
       -webkit-background-size: cover;
       -moz-background-size: cover;
