Descriptions für bessere Google-Vorschau

--- a/existenz.html
+++ b/existenz.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com -->
-  <title>AKADIA Akademie</title>
+  <title>AKADIA Akademie - Existenzgründungscoaching</title>
+  <meta name="description" content="Akadia Akademie GmbH hilft bei der Existenzgründung. Flyer Download für mehr Infos. Das Existenzgründungscoaching kann von der Agentur für Arbeit / Jobcenter vollständig gefördert werden." />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
