--- a/impressum.html
+++ b/impressum.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com -->
-  <title>AKADIA Akademie</title>
+  <title>AKADIA Akademie - Impressum</title>
+  <meta name="description" content="Akadia Akademie GmbH - Badepark 3, 39218 Schönebeck. E-Mail: kontakt@akadia-akademie.de" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
