--- a/karriere.html
+++ b/karriere.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>AKADIA Akademie – Karriere</title>
+  <title>AKADIA Akademie - Karriere</title>
+  <meta name="description" content="Bei unserem Karrierecoaching besprechen wir Themen, die DICH weiterbringen. Das Karrierecoaching kann von der Agentur für Arbeit / Jobcenter vollständig gefördert werden. Flyer Download für mehr Infos." />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
