--- a/standorte.html
+++ b/standorte.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com -->
-  <title>AKADIA Akademie</title>
+  <title>AKADIA Akademie - Standorte</title>
+  <meta name="description" content="Akadia Akademie GmbH Standorte: Auerbach, Potsdam, Wuppertal, Ulm, Magdeburg, Zossen, Leinatal, Neukirch/Lausitz, Wetzlar, Bad Saarow, Wernigerode, Gera, Mainz, Staßfurt, Dresden, Berlin, Schönebeck und dein Sofa." />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
