--- a/akadia.html
+++ b/akadia.html
@@ -3,6 +3,7 @@
 <head>
   <!-- Theme Made By www.w3schools.com -->
   <title>AKADIA Akademie</title>
+  <meta name="description" content="Akadia Akademie GmbH ist ein Bildungsträger, der Existenzgründungscoachings und Karrierecoachings anbietet." />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
