--- a/datenschutz.html
+++ b/datenschutz.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com -->
-  <title>AKADIA Akademie</title>
+  <title>AKADIA Akademie - Datenschutzerklärung</title>
+  <meta name="description" content="Datenschutzerklärung" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
