--- a/dozenten.html
+++ b/dozenten.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com -->
-  <title>AKADIA Akademie</title>
+  <title>AKADIA Akademie - Dozenten</title>
+  <meta name="description" content="Du möchtest auch Dozent bei uns werden? kontakt@akadia-akademie.de" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
