PDFs für Bürgergeld

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <!-- Theme Made By www.w3schools.com -->
   <title>AKADIA Akademie - Startseite</title>
-  <meta name="description" content="Akadia Akademie GmbH ist ein Bildungsträger, der Existenzgründungscoachings und Karrierecoachings anbietet." />
+  <meta name="description" content="Akadia Akademie GmbH ist ein Bildungsträger, der Existenzgründungscoachings und Karrierecoachings anbietet. Badepark 3, 39218 Schönebeck. Telefon: 03928 7639660. E-Mail: kontakt@akadia-akademie.de" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
