--- a/standorte.html
+++ b/standorte.html
@@ -70,7 +70,7 @@
     });
 
     function animate(targetId) {
-      let n = 18; // Number of sections "Standorte"
+      let n = 10; // Number of sections "Standorte"
       if (timeoutId) clearTimeout(timeoutId);
       let click = !!targetId;
 
@@ -144,77 +144,44 @@
       <g transform="translate(110 102)">
         <g id="wheel" class="spin">
           <g transform="rotate(  0)">
-            <polygon onclick="top.animate(18)" points="0,0 -100,-18 -100,18" style="fill:#e39706;"/>
-            <text onclick="top.animate(18)" class="so" x="-96" y="4">Dein Sofa?</text>
+            <polygon onclick="top.animate(10)" points="0,0 -100,-32.7 -100,32.7" style="fill:#e39706;"/>
+            <text onclick="top.animate(10)" class="so" x="-96" y="4">Dein Sofa?</text>
           </g>
-          <g transform="rotate( 20)">
-            <polygon onclick="top.animate(17)" points="0,0 -100,-18 -100,18" style="fill:#7da1aa;"/>
-            <text onclick="top.animate(17)" class="so" x="-96" y="4">AUERBACH</text>
+          <g transform="rotate( 36)">
+            <polygon onclick="top.animate(9)" points="0,0 -100,-32.7 -100,32.7" style="fill:#7da1aa;"/>
+            <text onclick="top.animate(9)" class="so" x="-96" y="4">AUERBACH</text>
           </g>
-          <g transform="rotate( 40)">
-            <polygon onclick="top.animate(16)" points="0,0 -100,-18 -100,18" style="fill:#4d6a75;"/>
-            <text onclick="top.animate(16)" class="so" x="-96" y="4">POTSDAM</text>
+          <g transform="rotate( 72)">
+            <polygon onclick="top.animate(8)" points="0,0 -100,-32.7 -100,32.7" style="fill:#4d6a75;"/>
+            <text onclick="top.animate(8)" class="so" x="-96" y="4">POTSDAM</text>
           </g>
-          <g transform="rotate( 60)">
-            <polygon onclick="top.animate(15)" points="0,0 -100,-18 -100,18" style="fill:#93b4c2;"/>
-            <text onclick="top.animate(15)" class="so" x="-96" y="4">WUPPERTAL</text>
+          <g transform="rotate(108)">
+            <polygon onclick="top.animate(7)" points="0,0 -100,-32.7 -100,32.7" style="fill:#93b4c2;"/>
+            <text onclick="top.animate(7)" class="so" x="-96" y="4">WUPPERTAL</text>
           </g>
-          <g transform="rotate( 80)">
-            <polygon onclick="top.animate(14)" points="0,0 -100,-18 -100,18" style="fill:#638590;"/>
-            <text onclick="top.animate(14)" class="so" x="-96" y="4">ULM</text>
-          </g>
-          <g transform="rotate( 100)">
-            <polygon onclick="top.animate(13)" points="0,0 -100,-18 -100,18" style="fill:#7da1aa;"/>
-            <text onclick="top.animate(13)" class="so" x="-96" y="4">MAGDEBURG</text>
-          </g>
-          <g transform="rotate(120)">
-            <polygon onclick="top.animate(12)" points="0,0 -100,-18 -100,18" style="fill:#4d6a75;"/>
-            <text onclick="top.animate(12)" class="so" x="-96" y="4">ZOSSEN</text>
-          </g>
-          <g transform="rotate(140)">
-            <polygon onclick="top.animate(11)" points="0,0 -100,-18 -100,18" style="fill:#93b4c2;"/>
-            <text onclick="top.animate(11)" class="so" x="-96" y="4">LEINATAL</text>
-          </g>
-          <g transform="rotate(160)">
-            <polygon onclick="top.animate(10)" points="0,0 -100,-18 -100,18" style="fill:#638590;"/>
-            <text onclick="top.animate(10)" class="so" x="-96" y="0" style="font-size: 10px">NEUKIRCH/</text>
-            <text onclick="top.animate(10)" class="so" x="-96" y="8" style="font-size: 10px">LAUSITZ</text>
+          <g transform="rotate(144)">
+            <polygon onclick="top.animate(6)" points="0,0 -100,-32.7 -100,32.7" style="fill:#638590;"/>
+            <text onclick="top.animate(6)" class="so" x="-96" y="4">MAGDEBURG</text>
           </g>
           <g transform="rotate(180)">
-            <polygon onclick="top.animate(9)" points="0,0 -100,-18 -100,18" style="fill:#7da1aa;"/>
-            <text onclick="top.animate(9)" class="so" x="-96" y="4">WETZLAR</text>
+            <polygon onclick="top.animate(5)" points="0,0 -100,-32.7 -100,32.7" style="fill:#7da1aa;"/>
+            <text onclick="top.animate(5)" class="so" x="-96" y="4">GERA</text>
           </g>
-          <g transform="rotate(200)">
-            <polygon onclick="top.animate(8)" points="0,0 -100,-18 -100,18" style="fill:#4d6a75;"/>
-            <text onclick="top.animate(8)" class="so" x="-96" y="4">BAD SAAROW</text>
+          <g transform="rotate(216)">
+            <polygon onclick="top.animate(4)" points="0,0 -100,-32.7 -100,32.7" style="fill:#4d6a75;"/>
+            <text onclick="top.animate(4)" class="so" x="-96" y="4">MAINZ</text>
           </g>
-          <g transform="rotate(220)">
-            <polygon onclick="top.animate(7)" points="0,0 -100,-18 -100,18" style="fill:#93b4c2;"/>
-            <text onclick="top.animate(7)" class="so" x="-96" y="4" style="font-size: 10px">WERNIGERODE</text>
-          </g>
-          <g transform="rotate(240)">
-            <polygon onclick="top.animate(6)" points="0,0 -100,-18 -100,18" style="fill:#638590;"/>
-            <text onclick="top.animate(6)" class="so" x="-96" y="4">GERA</text>
-          </g>
-          <g transform="rotate(260)">
-            <polygon onclick="top.animate(5)" points="0,0 -100,-18 -100,18" style="fill:#7da1aa;"/>
-            <text onclick="top.animate(5)" class="so" x="-96" y="4">MAINZ</text>
-          </g>
-          <g transform="rotate(280)">
-            <polygon onclick="top.animate(4)" points="0,0 -100,-18 -100,18" style="fill:#4d6a75;"/>
-            <text onclick="top.animate(4)" class="so" x="-96" y="4">STAßFURT</text>
-          </g>
-          <g transform="rotate(300)">
-            <polygon onclick="top.animate(3)" points="0,0 -100,-18 -100,18" style="fill:#93b4c2;"/>
+          <g transform="rotate(252)">
+            <polygon onclick="top.animate(3)" points="0,0 -100,-32.7 -100,32.7" style="fill:#93b4c2;"/>
             <text onclick="top.animate(3)" class="so" x="-96" y="4">DRESDEN</text>
           </g>
-          <g transform="rotate(320)">
-            <polygon onclick="top.animate(2)" points="0,0 -100,-18 -100,18" style="fill:#638590;"/>
-            <text onclick="top.animate(2)" class="so" x="-96" y="4">BERLIN</text>
+          <g transform="rotate(288)">
+            <polygon onclick="top.animate(2)" points="0,0 -100,-32.7 -100,32.7" style="fill:#638590;"/>
+            <text onclick="top.animate(2)" class="so" x="-96" y="4">SCHÖNEBECK</text>
           </g>
-          <g transform="rotate(340)">
-            <polygon onclick="top.animate(1)" points="0,0 -100,-18 -100,18" style="fill:#7da1aa;"/>
-            <text onclick="top.animate(1)" class="so" x="-96" y="4">SCHÖNEBECK</text>
+          <g transform="rotate(324)">
+            <polygon onclick="top.animate(1)" points="0,0 -100,-32.7 -100,32.7" style="fill:#7da1aa;"/>
+            <text onclick="top.animate(1)" class="so" x="-96" y="4">MAXEN</text>
           </g>
         </g>
       </g>
@@ -222,12 +189,12 @@
     </svg>
     <div class="col-12 col-sm-12 col-md-4 col-lg-6 text-center large-text">
       <div id="text1" class="infotext pt-3">
-        <h1>SCHÖNEBECK</h1>
-        <div id="text1short">Badepark 3, 39218 Schönebeck</div>
+        <h1>MAXEN</h1>
+        <div id="text1short">An der Naturbühne 14, 01809 Maxen</div>
       </div>
       <div id="text2" class="infotext pt-3">
-        <h1>BERLIN</h1>
-        <div id="text2short">Kollwitzerstr. 76, 10435 Berlin</div>
+        <h1>SCHÖNEBECK</h1>
+        <div id="text2short">Badepark 3, 39218 Schönebeck</div>
       </div>
       <div id="text3" class="infotext pt-3">
         <h1>DRESDEN</h1>
@@ -237,64 +204,32 @@
         </div>
       </div>
       <div id="text4" class="infotext pt-3">
-        <h1>STAßFURT</h1>
-        <div id="text4short">Förderstedter Straße 6b, 39418 Staßfurt</div>
+        <h1>MAINZ</h1>
+        <div id="text4short">Schusterstraße 46-48, 55116 Mainz</div>
       </div>
       <div id="text5" class="infotext pt-3">
-        <h1>MAINZ</h1>
-        <div id="text5short">Schusterstraße 46-48, 55116 Mainz</div>
+        <h1>GERA</h1>
+        <div id="text5short">Clara-Zetkin-Straße 28, 07545 Gera</div>
       </div>
       <div id="text6" class="infotext pt-3">
-        <h1>GERA</h1>
-        <div id="text6short">Clara-Zetkin-Straße 28, 07545 Gera</div>
+        <h1>MAGDEBURG</h1>
+        <div id="text6short">Gellertstraße 1, 39108 Magdeburg</div>
       </div>
       <div id="text7" class="infotext pt-3">
-        <h1>WERNIGERODE</h1>
-        <div id="text7short">Im langen Schlage 22A, 38855 Wernigerode</div>
+        <h1>WUPPERTAL</h1>
+        <div id="text7short">Heinz-Fangmann-Straße 2, 42287 Wuppertal</div>
       </div>
       <div id="text8" class="infotext pt-3">
-        <h1>BAD SAAROW</h1>
-        <div id="text8short">Ulmstr. 15, 154526 Bad Saarow</div>
+        <h1>POTSDAM</h1>
+        <div id="text8short">Luzernstraße 4, 14469 Potzdam</div>
       </div>
       <div id="text9" class="infotext pt-3">
-        <h1>WETZLAR</h1>
-        <div id="text9short">Schillerplatz13, 35578 Wetzlar</div>
+        <h1>AUERBACH</h1>
+        <div id="text9short">Freudenthal 1, 08209 Auerbach</div>
       </div>
       <div id="text10" class="infotext pt-3">
-        <h1><span>NEUKIRCH /</span> <span>LAUSITZ</span></h1>
-        <div id="text10short">Wilthener Str. 55, 01904 Neukirch/Lausitz</div>
-      </div>
-      <div id="text11" class="infotext pt-3">
-        <h1>LEINATAL</h1>
-        <div id="text11short">Ortsstraße 29, 99894 Leinatal</div>
-      </div>
-      <div id="text12" class="infotext pt-3">
-        <h1>ZOSSEN</h1>
-        <div id="text12short">Herman-Balzer-Straße 5, 15806 Zossen</div>
-      </div>
-      <div id="text13" class="infotext pt-3">
-        <h1>MAGDEBURG</h1>
-        <div id="text13short">Gellertstraße 1, 39108 Magdeburg</div>
-      </div>
-      <div id="text14" class="infotext pt-3">
-        <h1>ULM</h1>
-        <div id="text14short">Magirus-Deutz-Straße 12, 89077 Ulm</div>
-      </div>
-      <div id="text15" class="infotext pt-3">
-        <h1>WUPPERTAL</h1>
-        <div id="text15short">Heinz-Fangmann-Straße 2, 42287 Wuppertal</div>
-      </div>
-      <div id="text16" class="infotext pt-3">
-        <h1>POTSDAM</h1>
-        <div id="text16short">Luzernstraße 4, 14469 Potzdam</div>
-      </div>
-      <div id="text17" class="infotext pt-3">
-        <h1>AUERBACH</h1>
-        <div id="text17short">Freudenthal 1, 08209 Auerbach</div>
-      </div>
-      <div id="text18" class="infotext pt-3">
         <h1>Dein Sofa</h1>
-        <div id="text18short">Zuhause oder im Cafe, wo du gerade bist</div>
+        <div id="text10short">Zuhause oder im Cafe, wo du gerade bist</div>
       </div>
     </div>
   </div>
