Standort Wuppertal raus 9->8 (excl. Sofa)

--- a/standorte.html
+++ b/standorte.html
@@ -3,7 +3,7 @@
 <head>
   <!-- Theme Made By www.w3schools.com -->
   <title>AKADIA Akademie - Standorte</title>
-  <meta name="description" content="Akadia Akademie GmbH Standorte: Auerbach, Potsdam, Wuppertal, Ulm, Magdeburg, Zossen, Leinatal, Neukirch/Lausitz, Wetzlar, Bad Saarow, Wernigerode, Gera, Mainz, Staßfurt, Dresden, Berlin, Schönebeck und dein Sofa." />
+  <meta name="description" content="Akadia Akademie GmbH Standorte: Auerbach, Potsdam, Magdeburg, Gera, Mainz, Dresden, Schönebeck, Maxen und dein Sofa." />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
@@ -70,7 +70,7 @@
     });
 
     function animate(targetId) {
-      let n = 10; // Number of sections "Standorte"
+      let n = 9; // Number of sections "Standorte"
       if (timeoutId) clearTimeout(timeoutId);
       let click = !!targetId;
 
@@ -144,43 +144,39 @@
       <g transform="translate(110 102)">
         <g id="wheel" class="spin">
           <g transform="rotate(  0)">
-            <polygon onclick="top.animate(10)" points="0,0 -100,-32.7 -100,32.7" style="fill:#e39706;"/>
-            <text onclick="top.animate(10)" class="so" x="-96" y="4">Dein Sofa?</text>
+            <polygon onclick="top.animate(9)" points="0,0 -100,-36.5 -100,36.5" style="fill:#e39706;"/>
+            <text onclick="top.animate(9)" class="so" x="-96" y="4">Dein Sofa?</text>
           </g>
-          <g transform="rotate( 36)">
-            <polygon onclick="top.animate(9)" points="0,0 -100,-32.7 -100,32.7" style="fill:#7da1aa;"/>
-            <text onclick="top.animate(9)" class="so" x="-96" y="4">AUERBACH</text>
+          <g transform="rotate( 40)">
+            <polygon onclick="top.animate(8)" points="0,0 -100,-36.5 -100,36.5" style="fill:#4d6a75;"/>
+            <text onclick="top.animate(8)" class="so" x="-96" y="4">AUERBACH</text>
           </g>
-          <g transform="rotate( 72)">
-            <polygon onclick="top.animate(8)" points="0,0 -100,-32.7 -100,32.7" style="fill:#4d6a75;"/>
-            <text onclick="top.animate(8)" class="so" x="-96" y="4">POTSDAM</text>
+          <g transform="rotate( 80)">
+            <polygon onclick="top.animate(7)" points="0,0 -100,-36.5 -100,36.5" style="fill:#93b4c2;"/>
+            <text onclick="top.animate(7)" class="so" x="-96" y="4">POTSDAM</text>
           </g>
-          <g transform="rotate(108)">
-            <polygon onclick="top.animate(7)" points="0,0 -100,-32.7 -100,32.7" style="fill:#93b4c2;"/>
-            <text onclick="top.animate(7)" class="so" x="-96" y="4">WUPPERTAL</text>
-          </g>
-          <g transform="rotate(144)">
-            <polygon onclick="top.animate(6)" points="0,0 -100,-32.7 -100,32.7" style="fill:#638590;"/>
+          <g transform="rotate(120)">
+            <polygon onclick="top.animate(6)" points="0,0 -100,-36.5 -100,36.5" style="fill:#638590;"/>
             <text onclick="top.animate(6)" class="so" x="-96" y="4">MAGDEBURG</text>
           </g>
-          <g transform="rotate(180)">
-            <polygon onclick="top.animate(5)" points="0,0 -100,-32.7 -100,32.7" style="fill:#7da1aa;"/>
+          <g transform="rotate(160)">
+            <polygon onclick="top.animate(5)" points="0,0 -100,-36.5 -100,36.5" style="fill:#7da1aa;"/>
             <text onclick="top.animate(5)" class="so" x="-96" y="4">GERA</text>
           </g>
-          <g transform="rotate(216)">
-            <polygon onclick="top.animate(4)" points="0,0 -100,-32.7 -100,32.7" style="fill:#4d6a75;"/>
+          <g transform="rotate(200)">
+            <polygon onclick="top.animate(4)" points="0,0 -100,-36.5 -100,36.5" style="fill:#4d6a75;"/>
             <text onclick="top.animate(4)" class="so" x="-96" y="4">MAINZ</text>
           </g>
-          <g transform="rotate(252)">
-            <polygon onclick="top.animate(3)" points="0,0 -100,-32.7 -100,32.7" style="fill:#93b4c2;"/>
+          <g transform="rotate(240)">
+            <polygon onclick="top.animate(3)" points="0,0 -100,-36.5 -100,36.5" style="fill:#93b4c2;"/>
             <text onclick="top.animate(3)" class="so" x="-96" y="4">DRESDEN</text>
           </g>
-          <g transform="rotate(288)">
-            <polygon onclick="top.animate(2)" points="0,0 -100,-32.7 -100,32.7" style="fill:#638590;"/>
+          <g transform="rotate(280)">
+            <polygon onclick="top.animate(2)" points="0,0 -100,-36.5 -100,36.5" style="fill:#638590;"/>
             <text onclick="top.animate(2)" class="so" x="-96" y="4">SCHÖNEBECK</text>
           </g>
-          <g transform="rotate(324)">
-            <polygon onclick="top.animate(1)" points="0,0 -100,-32.7 -100,32.7" style="fill:#7da1aa;"/>
+          <g transform="rotate(320)">
+            <polygon onclick="top.animate(1)" points="0,0 -100,-36.5 -100,36.5" style="fill:#7da1aa;"/>
             <text onclick="top.animate(1)" class="so" x="-96" y="4">MAXEN</text>
           </g>
         </g>
@@ -216,20 +212,16 @@
         <div id="text6short">Gellertstraße 1, 39108 Magdeburg</div>
       </div>
       <div id="text7" class="infotext pt-3">
-        <h1>WUPPERTAL</h1>
-        <div id="text7short">Heinz-Fangmann-Straße 2, 42287 Wuppertal</div>
+        <h1>POTSDAM</h1>
+        <div id="text7short">Luzernstraße 4, 14469 Potzdam</div>
       </div>
       <div id="text8" class="infotext pt-3">
-        <h1>POTSDAM</h1>
-        <div id="text8short">Luzernstraße 4, 14469 Potzdam</div>
+        <h1>AUERBACH</h1>
+        <div id="text8short">Freudenthal 1, 08209 Auerbach</div>
       </div>
       <div id="text9" class="infotext pt-3">
-        <h1>AUERBACH</h1>
-        <div id="text9short">Freudenthal 1, 08209 Auerbach</div>
-      </div>
-      <div id="text10" class="infotext pt-3">
         <h1>Dein Sofa</h1>
-        <div id="text10short">Zuhause oder im Cafe, wo du gerade bist</div>
+        <div id="text9short">Zuhause oder im Cafe, wo du gerade bist</div>
       </div>
     </div>
   </div>
