Katja bei Geschäftsführer raus

--- a/standorte-17.html
+++ b/standorte-17.html
@@ -361,7 +361,7 @@
   <div id="team" class="row justify-content-center orange">
     <div class="col p-3 mx-0 my-3">
       <h1>Unser Team</h1>
-      Geschäftsführer: Jens Günther, Katja Ehrentraut<br>
+      Geschäftsführer: Jens Günther<br>
       Telefon: 0800 7639660<br>
       Mail: <a href="mailto:kontakt@akadia-akademie.de">kontakt@akadia-akademie.de</a>
     </div>
