Powered by RafaelFriesen.de

--- a/akadia.html
+++ b/akadia.html
@@ -152,6 +152,7 @@
     </div>
   </div>
   <div class="text-center mt-3">Copyright © 2023 AKADIA Akademie GmbH. All Rights Reserved.</div>
+  <div class="text-center py-0 my-0 powered-footer">Powered by RafaelFriesen.de</div>
 </footer>
 <script src="team.js"></script>
 
