--- a/existenz.html
+++ b/existenz.html
@@ -187,7 +187,7 @@
     </div>
   </div>
   <div class="text-center mt-3">Copyright © 2023 AKADIA Akademie GmbH. All Rights Reserved.</div>
-  <div class="text-center py-0 my-0 powered-footer">Powered by RafaelFriesen.de</div>
+  <div class="text-center py-0 my-0 powered-footer">Powered by <a href="https://rafaelfriesen.de/">RafaelFriesen.de</a></div>
 </footer>
 <script src="team.js"></script>
 
