Katja ganz raus

--- a/impressum.html
+++ b/impressum.html
@@ -64,7 +64,7 @@
 
       </h2>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h2>
       <div>
-        Jens Günther, Katja Ehrentraut<br>
+        Jens Günther<br>
         Badepark 3<br>
         39218 Schönebeck
       </div>
